fixed skinny screen overflow

--- a/src/Components/ComingSoon/ComingSoon.css
+++ b/src/Components/ComingSoon/ComingSoon.css
@@ -24,7 +24,7 @@
     min-width: 15em;
 }
 
-@media only screen and (max-width: 680px) {
+@media only screen and (max-width: 680px), (max-height: 600px) {
     .comingsoon-subtext {
         font-size: 1.2em;
     }
